--- a/login/package.json
+++ b/login/package.json
@@ -14,7 +14,6 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "react": "^18.2.0",
-    "react-native": "^0.72.3",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
@@ -23,23 +22,37 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
+    "@testing-library/react-native": "^12.1.3",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "@types/redux-mock-store": "^1.0.3",
+    "axios": "^1.4.0",
+    "babel-jest": "^29.6.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.6.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
+    "react-native": "^0.72.3",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1",
     "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16"
-  }
+  },
+  "description": "This is a new [**React Native**](https://reactnative.dev) project, bootstrapped using [`@react-native-community/cli`](https://github.com/react-native-community/cli).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
